# Controllers/AddItem.go
@@ -1,12 +1,15 @@
 package Controllers
 
 import (
+	"encoding/json"
+	"feldtstudie-backend/Config"
+	"feldtstudie-backend/Model"
 	"fmt"
 	"github.com/gin-gonic/gin"
-	"github.com/makiuchi-d/gozxing"
-	"github.com/makiuchi-d/gozxing/oned"
-	"image"
+	"gorm.io/gorm"
+	"io/ioutil"
 	"net/http"
+	"strconv"
 )
 import _ "image/png"
 import _ "image/jpeg"
@@ -14,45 +17,98 @@ import _ "image/jpeg"
 // @BasePath /api/v1
 
 // PingExample godoc
-// @Summary ping example
-// @Schemes
-// @Description do ping
-// @Tags example
+// @Summary add item
+// @Description Add an item by barcode number
+// @Tags add
 // @Accept json
 // @Produce json
-// @Success 200 {string} Helloworld
-// @Router /example/helloworld [get]
+// @Param ean query string true "EAN (barcode) number"
+// @Param mhd query string true "MHD (expiration date)"
+// @Param count query string true "Count (amount of item to add)"
+// @Success 200
+// @Router /api/additem [post]
 func AddItem(c *gin.Context) {
-	file, err := c.FormFile("image")
+	// EAN und MHD aus der Abfrageparameter abrufen
+	ean := c.Query("ean")
+	mhd := c.Query("mhd")
+	count := c.Query("count")
+
+	apiURL := fmt.Sprintf("https://world.openfoodfacts.org/api/v2/product/%s.json", ean)
+
+	response, err := http.Get(apiURL)
 	if err != nil {
-		c.JSON(400, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve product information"})
+		return
+	}
+	defer response.Body.Close()
+
+	body, err := ioutil.ReadAll(response.Body)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to read response body"})
 		return
 	}
 
-	src, srcErr := file.Open()
-	if srcErr != nil {
-		c.JSON(500, gin.H{"error1": srcErr.Error()})
-		return
-	}
-	defer src.Close()
-
-	imgDecode, _, error3 := image.Decode(src)
-	if error3 != nil {
-		c.JSON(400, gin.H{"error3": error3.Error()})
+	var productInfo map[string]interface{}
+	err = json.Unmarshal(body, &productInfo)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to parse JSON response"})
 		return
 	}
 
-	bmp, error4 := gozxing.NewBinaryBitmapFromImage(imgDecode)
-	if error4 != nil {
-		c.JSON(400, gin.H{"error4": error4.Error()})
+	// Überprüfen, ob "product" im JSON vorhanden ist
+	product, ok := productInfo["product"].(map[string]interface{})
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Product information is missing or not in the expected format"})
 		return
 	}
 
-	ean13Reader := oned.NewEAN13Reader()
-	result, _ := ean13Reader.Decode(bmp, nil)
-	fmt.Println(ean13Reader)
-	fmt.Println(result)
-	c.JSON(http.StatusOK, gin.H{
-		"result": result,
-	})
+	// Den Produktname aus der verschachtelten Struktur abrufen
+	productName, ok := product["product_name"].(string)
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Product name is missing or not a string"})
+		return
+	}
+
+	mhdInt, err := strconv.ParseInt(mhd, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid MHD format"})
+		return
+	}
+
+	eanInt, err := strconv.ParseInt(ean, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid MHD format"})
+		return
+	}
+
+	db := Config.DB
+
+	countUint64, err := strconv.ParseUint(count, 10, 64)
+	if err != nil {
+		fmt.Println("Fehler beim Konvertieren des Strings zu uint64:", err)
+		return
+	}
+
+	// Überprüfen, ob bereits ein Eintrag mit dem gleichen EAN und der gleichen ItemBBD existiert
+	var existingItem Model.Item
+	result := db.Where("\"item_bbd\" = ? AND \"item_ean\" = ?", mhdInt, ean).First(&existingItem)
+	if result.Error == gorm.ErrRecordNotFound {
+
+		newItem := Model.Item{
+			ItemName:  productName,
+			ItemBBD:   mhdInt,
+			ItemEAN:   eanInt, // Hinzufügen der EAN zum Vergleich
+			ItemCount: uint(countUint64),
+		}
+		db.Create(&newItem)
+	} else if result.Error == nil {
+		// Eintrag existiert bereits, erhöhe nur den ItemCount
+		existingItem.ItemCount++
+		db.Save(&existingItem)
+	} else {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to query database"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"result": "Item added successfully", "foodInfo": productInfo})
 }
